--- a/Control_PacientesDB/Views/Diagnostico/Edit.cshtml
+++ b/Control_PacientesDB/Views/Diagnostico/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Control_PacientesDB.Models.Diagnostico
+﻿@model Control_PacientesDB.Models.DiagnosticoViewModel
 
 @{
     ViewData["Title"] = "Editar Diagnostico";
