--- a/Control_PacientesDB/Views/Diagnostico/Create.cshtml
+++ b/Control_PacientesDB/Views/Diagnostico/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Control_PacientesDB.Models.Diagnostico
+﻿@model Control_PacientesDB.Models.DiagnosticoViewModel
 
 @{
     ViewData["Title"] = "Registrar Nuevo Diagnostico";
