--- a/Control_PacientesDB/Views/Shared/_Layout.cshtml
+++ b/Control_PacientesDB/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link" asp-area="" asp-controller="Pacientes" asp-action="Index">Pacientes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Diagnosticoes" asp-action="Index">Diagnosticos</a>
+                            <a class="nav-link" asp-area="" asp-controller="Diagnostico" asp-action="Index">Diagnosticos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Cirugias" asp-action="Index">Cirugias</a>
